--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ android {
             applicationId 'com.mimik.smarthome.visitorPanel'
 
         }
+
+        TMainPanel {
+            applicationId 'com.mimik.smarthome'
+
+        }
     }
 }
 
@@ -84,11 +89,10 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'pub.devrel:easypermissions:3.0.0'
-
+    implementation "com.airbnb.android:lottie:3.0.0-beta1"
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-
 
 
 }
