--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".userinterface.visitorPanel.V_Setting"
+        <activity android:name=".userinterface.homePanel.H_Setting"
             android:screenOrientation="landscape"/>
+        <activity
+            android:name=".userinterface.visitorPanel.V_Setting"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".VideoCall"
             android:screenOrientation="landscape" />
