--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,6 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     testImplementation 'junit:junit:4.12'
@@ -95,6 +94,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.zxing:core:3.2.1'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
-
+    implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
 
 }
